mainsite/static/mainsite/style.css
.navbar-nav,
.mr-auto {
flex: 1;
margin: auto !important;
display: flex;
justify-content: space-between;
}
.navbar-light .navbar-nav .nav-link {
  font-size: 28px;
  color: black;
  opacity: 1;
  margin-top: 20px;
  padding-top: auto;
  text-transform: uppercase;
  margin-left: 20px;
  margin-right: 20px;
}
.nav-link:hover {
  color: black;
  text-decoration: underline;
}
.navbar-brand {
  margin-top: 20px;
  margin-left: 20px;
}


.text-main {
  background-color: #fffcef;
  padding: 5em;
  border-radius: 0.5em;
}

.img-gretaogsteinar {
    max-width: 60%;
    height: auto;
}

.overskrift h2{
    color: black;
    font-size: xx-large;
}

.overskrift h4{
    color: black;
    font-size: x-large;

}

.blog-header a:hover{
    text-decoration: none;
}

.wedding-footer {
    background: #292929;
}
.wedding-footer-text{
    margin-top: 10px;
    margin-bottom: 10px;
    color: white;
}
.wedding-post {
    margin-bottom: 20px
}
.wedding-post-img {
    width: 80%;
}
.wishlist-img {
    width: 300px;
    object-fit: contain;
}
.wish-already-bought {
    color: red;
}



.brand {
  position: absolute;
  left: 5px;
  top: 200px;
}
.navn {
  font-size: 2.7em;
  font-weight: bold;
}
.heart-svg {
  height: 52px;
  color: red;
  fill: red;
}
.time-place {
  letter-spacing: 0.3em;
  font-size: 1.3em;
}

.bottom-brand {
  display: none;
}
.background-overlay-123 {
  background: rgba(12,34,56);
  opacity: 0.5;
  width: 100%;
  height: 100%;
  min-width: 100%;
  min-height: 100%;
  position: relative;
}
body {
  background: url(../img/stupebrett.jpg) no-repeat center center fixed;
  background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  -webkit-background-size: cover;
  font-family: "Verdana", Geneva, sans-serif;
}

@media screen and (max-width: 600px) {
    .overskrift h4{
        visibility: hidden;
        display: none;
    }
    .overskrift h2{
    position
    }
    .nav {
        margin: 0 auto;
        display: table;
        table-layout: fixed;
        float: none;
        justify-conten
    }
}

@media screen and (max-width: 767px) {
  body {
    background: url(../img/gretasteinarsol.jpg) no-repeat center center fixed;
    background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    -webkit-background-size: cover;
    font-family: "Verdana", Geneva, sans-serif;
  }
  .bottom-brand {
    display: block;
  }
  .top-brand {
    display: none;
  }
  .brand {
    width: 100%;
    position: fixed;
    bottom: 2em;
    top: auto;
    color: white;
    text-align: center;
  }
  .navn {
    font-size: 1.8em;
  }
  .time-place {
    letter-spacing: 0.24em;
    font-size: 1em;
  }
  .text-main {
    padding: 1em;
  }
}

